--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
@@ -19,8 +19,8 @@
             if (!Model.IsForDialog)
             {
                 <li id="menu3">
-                    @Html.ActionLink(Translation.GetCoreTextTranslation("Ta bort"), "Delete", new {id = Model.ComputerViewModel.Id}, new
-                    {@class = "btn deleteDialog", deleteDialogText = Translation.GetCoreTextTranslation("Är du säker på att du vill ta bort aktuell post") + "?"})
+                    @Html.ActionLink(Translation.GetCoreTextTranslation("Ta bort"), "Delete", new { id = Model.ComputerViewModel.Id }, new
+                    { @class = "btn deleteDialog", deleteDialogText = Translation.GetCoreTextTranslation("Är du säker på att du vill ta bort aktuell post") + "?" })
                 </li>
             }
         }
@@ -61,7 +61,7 @@
     @Html.EditorFor(m => m.ComputerViewModel.ContactFieldsModel)
     @Html.EditorFor(m => m.ComputerViewModel.StateFieldsViewModel)
 
-    
+
 
 
     if (Model.ComputerViewModel.CreatedDate.Show || Model.ComputerViewModel.ChangedDate.Show || Model.ComputerViewModel.DateFieldsModel.ScanDate.Show ||
@@ -143,13 +143,17 @@
             });
         });
 
-    $("#ComputerViewModel_WorkstationFieldsViewModel_WorkstationFieldsModel_ComputerTypeId_Value").change(function () {
+        $("#ComputerViewModel_WorkstationFieldsViewModel_WorkstationFieldsModel_ComputerTypeId_Value").change(function () {
 
-        $.get('@Url.Action("GetPrice", "Workstation")', { id: this.value }, function (data) {
-            $('#ComputerViewModel_ContractFieldsViewModel_ContractFieldsModel_PurchasePrice_Value').val(data);
-            
-        });
-    })
+            if (this.value > 0) {
+                $.get('@Url.Action("GetPrice", "Workstation")', { id: this.value }, function (data) {
+                    $('#ComputerViewModel_ContractFieldsViewModel_ContractFieldsModel_PurchasePrice_Value').val(data);
+                })
+            }
+            else {
+                $('#ComputerViewModel_ContractFieldsViewModel_ContractFieldsModel_PurchasePrice_Value').val(0);
+            }
+        })
 
 </script>
 
