136082 - Bug - Inventory - Purchase price accepts non-digits.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
@@ -155,6 +155,12 @@
             }
         })
 
+    $(document).ready(function () {
+        $('#ComputerViewModel_ContractFieldsViewModel_ContractFieldsModel_PurchasePrice_Value').prop('type','number')
+    });
+
+
+
 </script>
 
     @if (documentModel.Show)
