--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Web.Optimization
+@using DH.Helpdesk.Web.Infrastructure.Extensions.HtmlHelperExtensions
 @using DH.Helpdesk.Web
 @using DH.Helpdesk.Web.Infrastructure
 @model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Computer.ComputerEditViewModel
@@ -14,7 +15,7 @@
         @if (Model.UserHasInventoryAdminPermission)
         {
             <li id="menu1">
-                <input type="submit" value="@Translation.GetCoreTextTranslation("Spara")" class="btn" onclick=" $('#workstation_edit_form').submit(); " />
+                <input type="submit" value="@Translation.GetCoreTextTranslation("Spara")" class="btn" onclick="workstationEdit.submit()" />
             </li>
             if (!Model.IsForDialog)
             {
@@ -122,7 +123,7 @@
 
         @if (Model.FileUploadWhiteList != null)
         {
-            foreach(var extension in Model.FileUploadWhiteList)
+            foreach (var extension in Model.FileUploadWhiteList)
             {
                 @:window.parameters.fileUploadWhiteList.push('@extension');
             }
@@ -133,35 +134,110 @@
         }
 
 
-        $(function(jQuery) {
+        $(function (jQuery) {
+            $('#@Html.IdFor(m => m.ComputerViewModel.CommunicationFieldsViewModel.CommunicationFieldsModel.MacAddress.Value)')
+                .attr("data-val-uniquemac", '@string.Format(" {0} {1}", Html.PureFieldCaption(Model.ComputerViewModel.CommunicationFieldsViewModel.CommunicationFieldsModel.MacAddress), Translation.GetCoreTextTranslation("måste vara unikt"))');
+
+            $.validator.unobtrusive.adapters.add("uniquemac", [], function (options) {
+                options.rules["uniquemac"] = true;
+                options.messages["uniquemac"] = options.message;
+            });
+
+            $.validator.addMethod("uniquemac",
+                function (value, element, param) {
+                    var validator = this;
+                    if (!value) {
+                        var submitted = validator.formSubmitted;
+                        validator.prepareElement(element);
+                        validator.formSubmitted = submitted;
+                        validator.successList.push(element);
+                        delete validator.invalid[element.name];
+                        validator.showErrors();
+                        return true;
+                    }
+                    var previous = this.previousValue(element);
+                    if (!this.settings.messages[element.name]) {
+                        this.settings.messages[element.name] = {};
+                    }
+                    previous.originalMessage = this.settings.messages[element.name].uniquemac;
+                    if (previous.old === value) {
+                        return previous.valid;
+                    }
+                    previous.old = value;
+                    this.startRequest(element);
+                    var valid = "pending";
+                    $.get('@Url.Action("ValidateMacAddress", "Workstation")',
+                        {
+                            macAddress: value,
+                            currentId: @Model.Id
+                        },
+                        function (response) {
+                            validator.settings.messages[element.name].uniquemac = previous.originalMessage;
+                            valid = response === true || response === "true";
+                            if (valid) {
+                                var submitted = validator.formSubmitted;
+                                validator.prepareElement(element);
+                                validator.formSubmitted = submitted;
+                                validator.successList.push(element);
+                                delete validator.invalid[element.name];
+                                validator.showErrors();
+                            } else {
+                                var errors = {};
+                                var message = response || validator.defaultMessage(element, "uniquemac");
+                                errors[element.name] = previous.message = $.isFunction(message) ? message(value) : message;
+                                validator.invalid[element.name] = true;
+                                validator.showErrors(errors);
+                            }
+                            previous.valid = valid;
+                            validator.stopRequest(element, valid);
+                        },
+                        'json');
+                    return valid;
+                }
+            );
+            $('#workstation_edit_form')
+                .removeData("validator")
+                .removeData("unobtrusiveValidation");
+            $.validator.unobtrusive.parse($('#workstation_edit_form'));
+
             window.workstationEdit = new WorkstationEdit($);
             window.workstationEdit.init({
+                id: @Model.Id,
                 userId: @SessionFacade.CurrentUser.Id,
                 customerId: @SessionFacade.CurrentCustomer.Id,
                 getUnitsUrl: '@Url.Action("GetUnits", "Ajax", new {area = ""})',
-                getDepartmentsUrl: '@Url.Action("GetDepartments", "Ajax", new {area = ""})'
+                getDepartmentsUrl: '@Url.Action("GetDepartments", "Ajax", new {area = ""})',
+                validateMacAddressUrl: '@Url.Action("ValidateMacAddress", "Workstation")',
+                fieldsIds: {
+                    'MacAddressId':
+                        '@Html.IdFor(m => m.ComputerViewModel.CommunicationFieldsViewModel.CommunicationFieldsModel.MacAddress.Value)'
+                },
             });
+
+            // TODO: Move this section to WorkstationEdit
+            $('#@Html.IdFor(m => m.ComputerViewModel.ContractFieldsViewModel.ContractFieldsModel.PurchasePrice.Value)')
+                .prop('type', 'number');
+
+            // TODO: Move this section to WorkstationEdit
+            $("#@Html.IdFor(m => m.ComputerViewModel.WorkstationFieldsViewModel.WorkstationFieldsModel.ComputerTypeId.Value)")
+                .change(function() {
+
+                    if (this.value > 0) {
+                        $.get('@Url.Action("GetPrice", "Workstation")',
+                            { id: this.value },
+                            function(data) {
+                                $(
+                                        '#@Html.IdFor(m => m.ComputerViewModel.ContractFieldsViewModel.ContractFieldsModel.PurchasePrice.Value)')
+                                    .val(data);
+                            });
+                    } else {
+                        $(
+                                '#@Html.IdFor(m => m.ComputerViewModel.ContractFieldsViewModel.ContractFieldsModel.PurchasePrice.Value)')
+                            .val(0);
+                    }
+                });
         });
-
-        $("#ComputerViewModel_WorkstationFieldsViewModel_WorkstationFieldsModel_ComputerTypeId_Value").change(function () {
-
-            if (this.value > 0) {
-                $.get('@Url.Action("GetPrice", "Workstation")', { id: this.value }, function (data) {
-                    $('#ComputerViewModel_ContractFieldsViewModel_ContractFieldsModel_PurchasePrice_Value').val(data);
-                })
-            }
-            else {
-                $('#ComputerViewModel_ContractFieldsViewModel_ContractFieldsModel_PurchasePrice_Value').val(0);
-            }
-        })
-
-    $(document).ready(function () {
-        $('#ComputerViewModel_ContractFieldsViewModel_ContractFieldsModel_PurchasePrice_Value').prop('type','number')
-    });
-
-
-
-</script>
+    </script>
 
     @if (documentModel.Show)
     {
