--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
@@ -77,9 +77,35 @@
 <script src="~/Components/Formbuilder/dist/form-builder.min.js"></script>
 <script src="~/Components/Formbuilder/dist/form-render.min.js"></script>
 <script>
-    jQuery(function ($) {
+    var formBuilder
 
-        $(document.getElementById('fb-editor')).formBuilder();
+    $(document).ready(function () {
+        var formData = '[{"type":"text","label":"Full Name","subtype":"text","className":"form-control","name":"text-1476748004559"},{"type":"select","label":"Occupation","className":"form-control","name":"select-1476748006618","values":[{"label":"Street Sweeper","value":"option-1","selected":true},{"label":"Moth Man","value":"option-2"},{"label":"Chemist","value":"option-3"}]},{"type":"textarea","label":"Short Bio","rows":"5","className":"form-control","name":"textarea-1476748007461"}]';
+
+
+        formBuilder = $(document.getElementById('fb-editor')).formBuilder({
+        formData: formData});
+        
+        //If already exists nut cannot be edited
+        //$(document.getElementById('fb-editor')).formRender({
+        //    formData: formData
+        //});
+
+        //formBuilder.actions.setData(formData);
     });
+
+    function submitForm() {
+        alert(formBuilder.actions.getData('json', true))
+    }
+        //$.ajax({
+        //    url: 'some-url',
+        //    type: 'post',
+        //    dataType: 'json',
+        //    data: $('form#myForm').serialize(),
+        //    success: function (data) {
+        //        // ... do something with the data...
+        //    }
+        //});
+    //});
 
 </script>
