125586 - Bug - Case - mandatory fields not working - in progress

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1885,7 +1885,7 @@
                                                         @CaseFieldCaption(GlobalEnums.TranslationCaseFields.Problem, "Problem")
                                                     </td>
                                                     <td>
-                                                        @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.Problem, CaseSolutionFields.Project))
+                                                        @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.Problem, CaseSolutionFields.Problem))
                                                         {
                                                             <select id="case__Problem_Id" name="case_.Problem_Id">
                                                                 <option value="">&nbsp;</option>
