--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -108,6 +108,7 @@
             FinishingDate: "CaseLog_FinishingDate",
             UserCode: "case__UserCode",
             ReportedBy: "case__ReportedBy",
+            Cost: "case__Cost",
             CaseLanguageId: "case__RegLanguage_Id",
             PersonsName: "case__PersonsName",
             PersonsPhone: "case__PersonsPhone",
@@ -132,6 +133,7 @@
             CaseKey: '@Model.CaseKey',
             CustomerId: '@Model.case_.Customer_Id',
             ReportedBy: @Html.Raw(Json.Encode(Model.case_.ReportedBy)),
+            Cost: @Html.Raw(Json.Encode(Model.case_.Cost)),
             PersonsName: @Html.Raw(Json.Encode(Model.case_.PersonsName)),
             PersonsPhone: @Html.Raw(Json.Encode(Model.case_.PersonsPhone)),
             UserCode: @Html.Raw(Json.Encode(Model.case_.UserCode)),
@@ -222,9 +224,6 @@
             "case_.OU_Id": {
                 required: function() { return FieldIsRequired("@Model.caseFieldSettings.CaseFieldSettingRequiredCheck(GlobalEnums.TranslationCaseFields.OU_Id.ToString(), Model.IsCaseReopened)"); }
             },
-            "case_.Cost":{
-                required: function() { return FieldIsRequired("@Model.caseFieldSettings.CaseFieldSettingRequiredCheck(GlobalEnums.TranslationCaseFields.Cost.ToString(), Model.IsCaseReopened)"); }
-            },
             "case_.CostCentre":{
                 required: function() { return FieldIsRequired("@Model.caseFieldSettings.CaseFieldSettingRequiredCheck(GlobalEnums.TranslationCaseFields.CostCentre.ToString(), Model.IsCaseReopened)"); }
             },
@@ -263,9 +262,6 @@
             },
             "case_.ProductArea_Id": {
                 required: @Json.Encode(@Model.IsRequired(GlobalEnums.TranslationCaseFields.ProductArea_Id, CaseSolutionFields.ProductArea))
-            },
-            "case_.CaseType_Id": {
-                required: @Json.Encode(@Model.IsRequired(GlobalEnums.TranslationCaseFields.CaseType_Id, CaseSolutionFields.CaseType))
             },
             "case_.CaseType_Id": {
                 required: @Json.Encode(@Model.IsRequired(GlobalEnums.TranslationCaseFields.CaseType_Id, CaseSolutionFields.CaseType))
@@ -333,20 +329,31 @@
             "case_.WatchDate": {
                 required: function() { return FieldIsRequired("@Model.caseFieldSettings.CaseFieldSettingRequiredCheck(GlobalEnums.TranslationCaseFields.WatchDate.ToString(), Model.IsCaseReopened)"); }
             },
+            "case_.Cost": {
+                required: function () {
+                    if (($('#case__Cost').val() == "0" && $('#case__OtherCost').val() == "0" && $('#case__Currency').val() == "") &&  @Json.Encode(@Model.IsRequired(GlobalEnums.TranslationCaseFields.Cost, CaseSolutionFields.FinishingCause)) == true) {
+
+                        alert('Cost is required');
+                        //Does not work :(
+                        //return FieldIsRequired("@Model.caseFieldSettings.CaseFieldSettingRequiredCheck(GlobalEnums.TranslationCaseFields.Cost.ToString(), Model.IsCaseReopened)");
+                        return true;
+                    }
+                    else {
+                        return false;
+                    }
+                }
+            },
             "CaseLog.FinishingType": {
-                required: function(){
-                    if ($('#CaseLog_FinishingDate').closest('tr').css('display') != 'none' && $('#CaseLog_FinishingType').closest('tr').css('display') != 'none')
-                    {
-                        if (($('#CaseLog_FinishingDate').val() == "" || $('#CaseLog_FinishingDate').val() == null) && @Json.Encode(@Model.IsRequired(GlobalEnums.TranslationCaseFields.FinishingDate, CaseSolutionFields.FinishingDate)) == false)
-                        {
+                required: function () {
+                    if ($('#CaseLog_FinishingDate').closest('tr').css('display') != 'none' && $('#CaseLog_FinishingType').closest('tr').css('display') != 'none') {
+                        if (($('#CaseLog_FinishingDate').val() == "" || $('#CaseLog_FinishingDate').val() == null) && @Json.Encode(@Model.IsRequired(GlobalEnums.TranslationCaseFields.FinishingDate, CaseSolutionFields.FinishingDate)) == false) {
                             return false;
                         }
-                        else
-                        {
+                        else {
                             return true;
                         }
                     }
-                    else{
+                    else {
                         return false;
                     }
                 }
@@ -491,6 +498,9 @@
             }
         },
         messages: {
+            "case_.Cost": {
+                required: "@Translation.GetForJS(GlobalEnums.TranslationCaseFields.Cost.ToString(), Enums.TranslationSource.CaseTranslation, Model.case_.Customer_Id) @Translation.Get("måste anges")"
+            },
             "case_.ReportedBy": {
                 required: "@Translation.GetForJS(GlobalEnums.TranslationCaseFields.ReportedBy.ToString(), Enums.TranslationSource.CaseTranslation, Model.case_.Customer_Id) @Translation.Get("måste anges")"
             },
