--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/FieldSettingForComputerModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/FieldSettingForComputerModel.cshtml
@@ -9,4 +9,6 @@
 <td>
     @Html.CheckBoxFor(m => m.IsReadOnly, Model.IsReadOnlyDisabled ? (object)new { @class = "is_readonly_checkbox switchcheckbox", @readonly = "true" } : (object)new { @class = "is_readonly_checkbox switchcheckbox" })
 </td>
-
+<td>
+    @Html.CheckBoxFor(m => m.IsCopy, Model.IsCopyDisabled ? (object)new { @class = "is_copy_checkbox switchcheckbox", @readonly = "true" } : (object)new { @class = "is_copy_checkbox switchcheckbox" })
+</td>
